# projekt-huffman

./: .gitignore  CMakeLists.txt  README.md
data/: input.txt  output.huf
przykladowy_output/: dekompresja_check.txt  output1.huf
src/: huffman.cpp  huffman.h  io.cpp  io.h  main  main.cpp  minheap.cpp  minheap.h
